--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "openzeppelin-solidity": "1.9.0",
-    "zeppelin-solidity": "1.9.0"
+    "zeppelin-solidity": "^1.9.0"
+  },
+  "devDependencies": {
+    "truffle-flattener": "^1.2.5"
   }
 }
